--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,15 @@
 
     <!--Intro Actovity-->
     <string name="intro_main">사람들의 온기를 느낄 수 있는 \n작은 공간</string>
+
+    <!--Permission Actovity-->
+    <string name="permission_main_title">이용 안내</string>
+    <string name="permission_sub_title">본 서비스를 이용하려면 아래 권한을 모두 허용해 주세요.</string>
+    <string name="permission_allow">허용하기</string>
+
+
+    <string name="joinAgree_main_title">이용약관에 동의해 주세요.</string>
+    <string name="joinPhoneAuth_main_title">전화번호 인증</string>
+    <string name="joinProfile_main_title">프로필 작성</string>
+
 </resources>
